@@ -513,14 +513,15 @@ maintained for the purpose of relaying SNMP messages.
 *trunk-bind-address*
 ++++++++++++++++++++
 
-Local network endpoint address to bind trunk connection to.
+Local IPv4 or IPv6 network endpoint address to bind trunk connection to.
 
 .. _trunk-peer-address-client-option:
 
 *trunk-peer-address*
 ++++++++++++++++++++
 
-Remote network endpoint address to connect to when establishing trunk connection.
+Remote IPv4 or IPv6 network endpoint address to connect to when establishing
+trunk connection.
 
 .. _trunk-ping-period-client-option:
 
@@ -581,7 +582,7 @@ This option can contain :ref:`SNMP macros <snmp-macros>`.
     trunking-group {
       trunk-crypto-key: 1234567890
 
-      host-A {
+      connect-over-ipv4 {
         trunk-bind-address: 127.0.0.1
         trunk-peer-address: 127.0.0.1:30301
         trunk-connection-mode: client
@@ -589,8 +590,8 @@ This option can contain :ref:`SNMP macros <snmp-macros>`.
         trunk-id: servertrunk
       }
 
-      interface-1 {
-        trunk-bind-address: 127.0.0.1:30201
+      listen-on-ipv6 {
+        trunk-bind-address: [::1]:30201
         trunk-connection-mode: server
 
         trunk-id: <discover>
